# python-with-c-template

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
examples/: torch_reduce_add.py
src/my_proj/: __init__.py  torch.py
src/my_proj/ext/: torch_ext.pyi
src/my_proj/ext/_linalg/: module.c
src/my_proj/ext/_linalg/binds/: matmul.c  matmul.h
src/my_proj/ext/_linalg/lib/: cuda_utils.cu  cuda_utils.h  matmul.cu  matmul.h
src/my_proj/ext/_math/: module.c  packages.json
src/my_proj/ext/_math/binds/: multiply.c  multiply.h  square.c  square.h
src/my_proj/ext/_math/lib/: multiply.c  multiply.h  square.c  square.h
src/my_proj/ext/_torch_ext/: module.cpp
src/my_proj/ext/_torch_ext/binds/: matmul.cpp  matmul.h  reduce_add.cpp  reduce_add.h
src/my_proj/ext/_torch_ext/lib/: matmul.h  matmul_cpu.cpp  matmul_cuda.cu  reduce_add.cu  reduce_add.h  utils.h
src/tests/: test_linalg.py  test_math.py  test_torch.py
